libaudioverse-sys/src/libaudioverse/libaudioverse.h


/**The public interface to Libaudioverse.*/

/*Forward-declares all Libaudioverse types.*/

typedef int LavError;

typedef int LavHandle;