libaudioverse-sys/pregenerated_bindings.rs

 pub fn Lav_environmentNodeAddEffectSend ( nodeHandle : LavHandle , channels : :: std :: os :: raw :: c_int , isReverb : :: std :: os :: raw :: c_int , connectByDefault : :: std :: os :: raw :: c_int , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createSourceNode ( serverHandle : LavHandle , environmentHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_sourceNodeFeedEffect ( nodeHandle : LavHandle , effect : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_sourceNodeStopFeedingEffect ( nodeHandle : LavHandle , effect : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_sourceNodeSetPropertiesFromEnvironment ( nodeHandle : LavHandle , ) -> LavError ; 
} pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_PANNING_STRATEGY : lav_STANDARD_ENVIRONMENT_PROPERTIES = 0 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_DISTANCE_MODEL : lav_STANDARD_ENVIRONMENT_PROPERTIES = 1 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_MAX_DISTANCE : lav_STANDARD_ENVIRONMENT_PROPERTIES = -12 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_DEFAULT_SIZE : lav_STANDARD_ENVIRONMENT_PROPERTIES = -11 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_OUTPUT_CHANNELS : lav_STANDARD_ENVIRONMENT_PROPERTIES = -10 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_REVERB_DISTANCE : lav_STANDARD_ENVIRONMENT_PROPERTIES = -9 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_MIN_REVERB_LEVEL : lav_STANDARD_ENVIRONMENT_PROPERTIES = -8 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_MAX_REVERB_LEVEL : lav_STANDARD_ENVIRONMENT_PROPERTIES = -7 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_POSITION : lav_STANDARD_ENVIRONMENT_PROPERTIES = -6 ; pub const lav_STANDARD_ENVIRONMENT_PROPERTIES_Lav_ENVIRONMENT_ORIENTATION : lav_STANDARD_ENVIRONMENT_PROPERTIES = -5 ; pub type lav_STANDARD_ENVIRONMENT_PROPERTIES = :: std :: os :: raw :: c_int ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_MAX_DISTANCE : Lav_SOURCE_PROPERTIES = 0 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_DISTANCE_MODEL : Lav_SOURCE_PROPERTIES = 1 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_SIZE : Lav_SOURCE_PROPERTIES = 2 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_REVERB_DISTANCE : Lav_SOURCE_PROPERTIES = 3 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_PANNING_STRATEGY : Lav_SOURCE_PROPERTIES = 4 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_HEAD_RELATIVE : Lav_SOURCE_PROPERTIES = 5 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_MIN_REVERB_LEVEL : Lav_SOURCE_PROPERTIES = 6 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_MAX_REVERB_LEVEL : Lav_SOURCE_PROPERTIES = 7 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_OCCLUSION : Lav_SOURCE_PROPERTIES = 8 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_CONTROL_PANNING : Lav_SOURCE_PROPERTIES = 9 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_CONTROL_DISTANCE_MODEL : Lav_SOURCE_PROPERTIES = 10 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_CONTROL_REVERB : Lav_SOURCE_PROPERTIES = 11 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_POSITION : Lav_SOURCE_PROPERTIES = 12 ; pub const Lav_SOURCE_PROPERTIES_Lav_SOURCE_ORIENTATION : Lav_SOURCE_PROPERTIES = 13 ; pub type Lav_SOURCE_PROPERTIES = :: std :: os :: raw :: c_int ; pub const Lav_DISTANCE_MODELS_Lav_DISTANCE_MODEL_LINEAR : Lav_DISTANCE_MODELS = 0 ; pub const Lav_DISTANCE_MODELS_Lav_DISTANCE_MODEL_INVERSE : Lav_DISTANCE_MODELS = 1 ; pub const Lav_DISTANCE_MODELS_Lav_DISTANCE_MODEL_INVERSE_SQUARE : Lav_DISTANCE_MODELS = 2 ; pub type Lav_DISTANCE_MODELS = :: std :: os :: raw :: c_int ;